testcases/cloud_user/cloudformation/tempalates/instance-vpc.json
{
  "Parameters" : {
    "KeyName" : {
      "Type" : "String"
    },
    "ImageId" : {
      "Type" : "String"
    }
  },
  "Resources":{
    "Ec2Instance":{
      "Type":"AWS::EC2::Instance",
      "Properties":{
        "ImageId": { "Ref" : "ImageId" },
        "KeyName" : { "Ref" : "KeyName" },
        "SecurityGroups":[ { "Ref":"InstanceSecurityGroup" } ],
        "Tags": [{
          "Key" : "CFN-INSTANCE",
          "Value" : "cloudformation instance"
          }]
      }
    },
    "InstanceSecurityGroup":{
      "Type":"AWS::EC2::SecurityGroup",
      "Properties":{
        "GroupDescription":"Cloudformation Group",
        "SecurityGroupIngress":[{
          "IpProtocol":"tcp",
          "FromPort":"22",
          "ToPort":"22",
          "CidrIp":"0.0.0.0/0"
          }]
        }
      },
      "IngressRule":{
        "Type":"AWS::EC2::SecurityGroupIngress",
        "Properties":{
          "GroupId":{
            "Fn::GetAtt": [
              "InstanceSecurityGroup",
              "GroupId"
            ]
           },
          "FromPort":"80",
          "ToPort":"80",
          "IpProtocol":"tcp",
          "CidrIp":"0.0.0.0/0"
        }
      },
      "NewVolume" : {
        "Type" : "AWS::EC2::Volume",
        "Properties" : {
          "Size" : "1",
          "AvailabilityZone" : "one",
          "Tags" : [{
            "Key" : "CFN-VOLUME",
            "Value" : "cloudformation volume"
            }]
        }
      },
      "MountPoint" : {
        "Type" : "AWS::EC2::VolumeAttachment",
        "Properties" : {
          "InstanceId" : { "Ref" : "Ec2Instance" },
          "VolumeId"  : { "Ref" : "NewVolume" },
          "Device" : "/dev/sdh"
        }
      }
    }
  }
